RESOLVED FIXED21603
[GTK] Minor fixes to GOwnPtr
https://bugs.webkit.org/show_bug.cgi?id=21603
Summary [GTK] Minor fixes to GOwnPtr
Marco Barisione
Reported 2008-10-14 15:18:33 PDT
As Darin asked on comment 10 to bug #20483 we should fix some minor issues in GOwnPtr: - Style fixes - freeOwnedPtr should be renamed to make it clear that it's for glib - rawPtr should assert that the pointer is null - rawPtr should have a better name
Attachments
Patcj (5.62 KB, patch)
2008-10-14 16:13 PDT, Marco Barisione
sam: review+
Marco Barisione
Comment 1 2008-10-14 16:13:40 PDT
Jan Alonzo
Comment 2 2008-10-17 14:17:19 PDT
Landed in r37660
Note You need to log in before you can comment on or make changes to this bug.